deploy/service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-srv-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: apps.huda-fiqri.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-srv-app-svc
            port:
              number: 80
